Open Amazon redeem link in system browser. Fix buy gc on mobile

--- a/src/sass/amazon.scss
+++ b/src/sass/amazon.scss
@@ -20,3 +20,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
 }
+
+ol.amazon-list {
+  list-style: decimal !important;
+}
